XO_Project_UAT/Project--XOGrp--UAT/src/objects/zqu__QuoteRatePlanCharge__c.object
<CustomObject>
    <fields>
        <fullName>zqu__FeeType__c</fullName>
        <label>FeeType</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsLastSegment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag that determines whether the existing Quote Rate Plan Charge belongs to the latest segment.</description>
        <inlineHelpText>A flag that determines whether the existing Quote Rate Plan Charge belongs to the latest segment.</inlineHelpText>
        <label>Is Last Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ListPriceBase__c</fullName>
        <label>List Price Base</label>
        <picklist>
            <picklistValues>
                <fullName>Per Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Billing Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListTotal__c</fullName>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Period__c</fullName>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__PreviewedMRR__c</fullName>
        <description>MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PreviewedTCV__c</fullName>
        <description>TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PriceChangeOption__c</fullName>
        <label>Price Change Option</label>
        <picklist>
            <picklistValues>
                <fullName>NoChange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpecificPercentageValue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UseLatestProductCatalogPricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__PriceIncreasePercentage__c</fullName>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeZuoraId__c</fullName>
        <description>corresponding Id with Product Catalog on remote zuora server</description>
        <label>Product Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan Charge associated with a Product Rate Plan Charge.</description>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanChargeFullName__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanChargeZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <description>The identification of the rate plan that this charge applies to.</description>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanName__c</fullName>
        <label>Rate Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RatingGroup__c</fullName>
        <label>Rating Group</label>
        <picklist>
            <picklistValues>
                <fullName>ByBillingPeriod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByUsageStartDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByUsageRecord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByUsageUpload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ByGroupId</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Segment__c</fullName>
        <label>Segment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificBillingPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
        <label>Specific Billing Period</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificEndDate__c</fullName>
        <description>The specific date on which the charge ends.</description>
        <inlineHelpText>The specific date on which the charge ends.</inlineHelpText>
        <label>Specific End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The status of the charge. If the status is Original, the charge will not be included in the Order request.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Original</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionRatePlanChargeZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan charge that the amendment is modifying. Required if AmendmentType is set to UpdateProduct.</description>
        <label>Subscription Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <inlineHelpText>Total Contract Value</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerDate__c</fullName>
        <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
        <inlineHelpText>The date when the charge becomes effective, and billing begins.</inlineHelpText>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerEvent__c</fullName>
        <label>Trigger Event</label>
        <picklist>
            <picklistValues>
                <fullName>ContractEffective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServiceActivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerAcceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpecificDate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods_Type__c</fullName>
        <description>Determines the period type used to define when the charge ends</description>
        <label>Up To Periods Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Periods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__WeeklyBillCycleDay__c</fullName>
        <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
        <label>Weekly Bill Cycle Day</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quote Rate Plan Charge</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__QuoteRatePlan__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>zqu__TriggerDate__c</columns>
        <columns>Product_Type__c</columns>
        <columns>ProductType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Forbid_charge_customer_over_rate_card</fullName>
        <active>true</active>
        <description>SS-7248, CSP-2874</description>
        <errorConditionFormula>AND(
((zqu__Discount__c &lt;0) || (zqu__EffectivePrice__c &lt;0)),
$Profile.Name &lt;&gt; &apos;Service Accounts&apos;,
$Profile.Name &lt;&gt; &apos;Service Accounts Hubspot&apos;
)</errorConditionFormula>
        <errorMessage>You should not charge customers over the rate card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Quantity_must_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>zqu__Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>